# pacopy

./: .gitignore  Makefile  README.md  justfile  setup.cfg  setup.py  test_requirements.txt  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
doc/: conf.py  index.rst
pacopy/: __about__.py  __init__.py  branch_switching.py  euler_newton.py  natural.py  newton.py
pycont/: __init__.py  euler_newton.py  natural.py  newton.py
src/pacopy/: __init__.py  errors.py  euler_newton.py  natural.py  newton.py
test/: test_allen_cahn.py  test_bratu.py  test_bratu1d.py  test_brusselator2d.py  test_fenics_bratu.py  test_fenics_mittelmann.py  test_ginzburg_landau.py  test_ginzburg_landau_real.py  test_gross_pitaevskii.py  test_pycont.py
tests/: justfile  test_allen_cahn.py  test_bratu1d.py  test_brusselator2d.py  test_fenics_bratu.py  test_ginzburg_landau.py  test_ginzburg_landau_real.py  test_gross_pitaevskii.py
