[metadata]
name = pacopy
version = 0.1.3
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Numerical continuation in Python
url = https://github.com/nschloe/pacopy
project_urls =
    Code=https://github.com/nschloe/pacopy
    Issues=https://github.com/nschloe/pacopy/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    meshplex >= 0.15.3, < 0.16.0
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel
